--- a/components/Featurecards/card.css
+++ b/components/Featurecards/card.css
@@ -15,6 +15,12 @@ html {
   align-items: center;
 }
 
+.img {
+  width: 500px;
+  height: 250px;
+  border-radius: 15px;
+}
+
 .flex-centerY-centerX {
   justify-content: center;
   -webkit-box-pack: center;
@@ -44,6 +50,8 @@ body {
   padding: 15px;
   margin: 15px auto;
   background-color: #fff;
+  border-radius: 20px;
+
 }
 
 @media (max-width: 991px) {
@@ -139,7 +147,7 @@ body {
   /* ease-out */
   width: 660px;
   height: 100%;
-  background-color: #1D24CA;
+  background-color: #007FFF;
   position: absolute;
   left: -659px;
 }
@@ -173,15 +181,17 @@ body {
 
 .info-inner .p-name {
   font-family: 'PT Sans', sans-serif;
-  font-size: 18px;
-  color: #252525;
+  color: #121214;
+  font-size: 20px;
+  font-weight: 900;
+  
 }
 
 .info-inner .p-company {
   font-family: 'Lato', sans-serif;
   font-size: 12px;
   text-transform: uppercase;
-  color: #8c8c8c;
+  color: #29292b;
 }
 
 .a-size {
@@ -199,7 +209,7 @@ body {
   width: 100%;
   bottom: -20px;
   font-family: 'PT Sans', sans-serif;
-  color: #828282;
+  color: #1e1e33;
   opacity: 0;
 }
 
@@ -241,7 +251,7 @@ body {
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   font-size: 16px;
-  color: #252525;
+  color: #121214;
 }
 
 .cart .add-to-cart {
