--- a/components/Featurecards/card.css
+++ b/components/Featurecards/card.css
@@ -52,7 +52,8 @@ body {
   margin: 15px auto;
   background-color: #fff;
   border-radius: 20px;
-
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+ 
 }
 
 @media (max-width: 991px) {
@@ -78,7 +79,7 @@ body {
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  color: #818181;
+  color: #0a0a0af1;
 }
 
 .el-wrapper:hover .add-to-cart {
@@ -148,7 +149,7 @@ body {
   /* ease-out */
   width: 660px;
   height: 100%;
-  background-color: #1da1f2;
+  background-color: #dce3e9;
   position: absolute;
   left: -670px;
 }
@@ -156,7 +157,7 @@ body {
 .h-bg .h-bg-inner {
   width: 50%;
   height: 100%;
-  background-color: #B4B4B8;
+  background-color: #f7f7f7;
 }
 
 .info-inner {
@@ -285,4 +286,24 @@ body {
   letter-spacing: 0.045em;
   text-transform: uppercase;
   white-space: nowrap;
+}
+
+
+
+
+
+.el-wrapper {
+  flex: 0 0 auto;
+  /* Allow items to shrink but not grow */
+  width: 320px;
+  height: 380px;
+  /* Set a fixed width for each card */
+  margin-right: 20px;
+}
+
+.container {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  /* Optional: Add styles for height, width, etc. */
 }
